--- a/package.json
+++ b/package.json
@@ -15,5 +15,24 @@
   "bugs": {
     "url": "https://github.com/pasindurukshan/Research-project-management-tool/issues"
   },
-  "homepage": "https://github.com/pasindurukshan/Research-project-management-tool#readme"
+  "homepage": "https://github.com/pasindurukshan/Research-project-management-tool#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-validator": "^6.11.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.5",
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.6.2",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "path": "^0.12.7",
+    "uuidv4": "^6.2.8"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
