--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,16 @@
   "dependencies": {
     "axios": "^0.20.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.6.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.1",
+    "react-router": "^6.3.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "3.4.3",
+    "reactstrap": "^9.0.3",
+    "sweetalert2": "^11.4.17"
   },
   "scripts": {
     "start": "react-scripts start"
