--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "rxjs": "^7.1.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1",
-    "babel-jest": "^26.6.0"
+    "babel-jest": "^26.6.0",
+	"sweetalert2": "^11.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
