--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "REST API for SLIIT web client",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",    
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "server": "nodemon server.js",
-    "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
-    "start": "node server.js"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "jest": {
     "testEnvironment": "node"
