--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  
+  "name": "frontend",
+  "proxy": "http://127.0.0.1:5000",  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -55,6 +56,5 @@
   },
   "devDependencies": {
     "react-test-renderer": "^17.0.2"
-  },
-  "proxy": "https://sliitportalmart.herokuapp.com/"
+  }
 }
